--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,65 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body{
+    font-family: 'PT Sans', sans-serif;
+}
+
+
+
+/* UTILITY */
+
+.debug{
+    border: 1px solid black;
+}
+
+.flex{
+    display: flex;
+}
+
+.between{
+    justify-content: space-between;
+}
+
+.around{
+    justify-content: space-around;
+}
+
+/* UTILITY */
+
+.container{
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
+.menu-header .container{
+    height: 100%;
+    margin: 0 20px;
+}
+
+.menu-header{
+    background-color: #0084FD;
+    height: 80px;
+    color: white;
+}
+
+.logo{
+    font-size: 2.5rem;
+    align-items: center;
+}
+
+.nav-hamburgher{
+    font-size: 1.8rem;
+    align-items: center;
+}
+
+.nav-hamburgher a{
+    text-decoration: none;
+    color: white;
+}
+
+.nav-desktop{
+    display: none;
+    
+}
