--- a/css/style.css
+++ b/css/style.css
@@ -28,11 +28,24 @@ body{
     justify-content: space-around;
 }
 
+.wrap{
+    flex-wrap: wrap;
+}
 /* UTILITY */
 
+/* HEADER  */
 .container{
-    max-width: 1100px;
+    max-width: 1200px;
     margin: 0 auto;
+}
+
+.menu-header{
+    position: fixed;
+    width: 100vw;
+    z-index: 999;
+    background-color: #0084FD;
+    height: 80px;
+    color: white;
 }
 
 .menu-header .container{
@@ -40,19 +53,14 @@ body{
     margin: 0 20px;
 }
 
-.menu-header{
-    background-color: #0084FD;
-    height: 80px;
-    color: white;
-}
-
 .logo{
     font-size: 2.5rem;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .nav-hamburgher{
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     align-items: center;
 }
 
@@ -64,4 +72,36 @@ body{
 .nav-desktop{
     display: none;
     
+}
+/* HEADER  */
+
+/* MAIN  */
+
+.demo .container .row{
+    width: 100%;
+    margin: 0 auto;
+}
+
+.row .col{
+    width: 100%;
+}
+
+.col .card-large{
+    width: 60%;
+    height: 600px;
+}
+
+.col .card-small{
+    width: 30%;
+    height: 360px;
+}
+
+/*************************************************
+
+    RESPONSIVE
+
+*************************************************/
+
+@media screen and(min-width:768px){
+
 }
