--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body{
 }
 
 .menu-header{
-    position: fixed;
+    
     width: 100vw;
     z-index: 999;
     background-color: #0084FD;
@@ -50,13 +50,18 @@ body{
 
 .menu-header .container{
     height: 100%;
-    margin: 0 20px;
+    
 }
 
 .logo{
     font-size: 2.5rem;
     align-items: center;
     margin-bottom: 10px;
+    margin-left: 20px;
+}
+
+.container .nav{
+    margin-right: 20px;
 }
 
 .nav-hamburgher{
@@ -77,23 +82,34 @@ body{
 
 /* MAIN  */
 
-.demo .container .row{
-    width: 100%;
-    margin: 0 auto;
+.demo .container{
+    margin: 30px;
 }
 
-.row .col{
+.container .row1, .container .row2{
     width: 100%;
+    
 }
 
-.col .card-large{
+.row1 .card-large{
     width: 60%;
     height: 600px;
+    background-color: aqua;
+    
 }
 
-.col .card-small{
-    width: 30%;
+.row1 .card-small{
+    width: 40%;
     height: 360px;
+    background-color: aqua;
+    
+}
+
+.row2 .card-small{
+    width: 40%;
+    height: 360px;
+    background-color: aqua;
+    
 }
 
 /*************************************************
