--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,18 @@ body{
 
 *************************************************/
 
-@media screen and(min-width:768px){
+@media screen and (min-width:768px){
     
+    .container .row{
+        justify-content: space-between;
+    }
+
+    .row .card-large{
+        width: 65%;
+    }
+
+    .row .card-small{
+        width: 30%;
+        height: 600px;
+    }
 }
