--- a/css/style.css
+++ b/css/style.css
@@ -57,11 +57,11 @@ body{
     font-size: 2.5rem;
     align-items: center;
     margin-bottom: 10px;
-    margin-left: 20px;
+    margin-left: 30px;
 }
 
 .container .nav{
-    margin-right: 20px;
+    margin-right: 30px;
 }
 
 .nav-hamburgher{
@@ -83,12 +83,13 @@ body{
 /* MAIN  */
 
 .demo .container{
-    margin: 30px;
+    margin: 0 30px;
 }
 
 .container .row{
     width: 100%;
-    
+    margin-top: 30px;
+    justify-content: center;
 }
 
 .row .card-large{
@@ -117,6 +118,7 @@ body{
     
     .container .row{
         justify-content: space-between;
+        
     }
 
     .row .card-large{
@@ -126,5 +128,27 @@ body{
     .row .card-small{
         width: 30%;
         height: 600px;
+    }
+}
+
+@media screen and (min-width:1200px){
+    .row .card-large{
+        height: 350px;
+    }
+
+    .row .card-small{
+        height: 350px;
+    }
+
+    .demo .container{
+        margin: 0 auto;
+    }
+
+    .logo{
+        margin-left: 0;
+    }
+    
+    .container .nav{
+        margin-right: 0;
     }
 }
