--- a/css/style.css
+++ b/css/style.css
@@ -106,6 +106,21 @@ body{
     margin-bottom: 30px;
 }
 
+.strategic{
+    background-color: #9792E4;
+}
+
+.strategic .col1{
+    width: 100%;
+    height: 650px;
+    background-color: red;
+}
+.strategic .col2{
+    width: 100%;
+    height: 600px;
+    background-color: red;
+}
+
 
 
 /*************************************************
@@ -142,7 +157,7 @@ body{
         height: 350px;
     }
 
-    .row .card-small{
+    .demo #larger{
         height: 350px;
     }
 
