--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,10 @@ body{
     background-color: #9792E4;
 }
 
+.strategic .container{
+    margin: 0 30px;
+}
+
 .strategic .col1{
     width: 100%;
     height: 650px;
@@ -124,6 +128,7 @@ body{
 
 .testimonial .container{
     height: 100%;
+    margin: 0 30px;
 }
 .testimonial .row{
     height: 100%;
@@ -143,6 +148,51 @@ body{
     text-align: center;
 }
 
+.benefits{
+    background-color: #9792E4;
+}
+
+.benefits .container{
+    height: 100%;
+    margin: 0 30px;
+}
+
+.benefits .row{
+    height: 100%;
+}
+
+.benefits h2{
+    text-align: center;
+    margin-bottom: 70px;
+}
+
+.benefits .col{
+    width: 100%;
+    height: 420px;
+    background-color: grey;
+    margin-bottom: 30px;
+}
+
+.about .container{
+    height: 100%;
+    margin: 0 30px;
+}
+
+.about .row{
+    height: 100%;
+}
+
+.about h2{
+    margin-bottom: 50px;
+}
+
+.about .col:nth-child(1){
+    height: 900px;
+    margin-bottom: 50px;
+}
+.about .col:nth-child(2){
+    height: 450px;
+}
 
 
 /*************************************************
@@ -186,6 +236,30 @@ body{
         height: 280px;
     }
 
+    .benefits .row{
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .benefits .col{
+        width: 49%;
+    }
+
+    .about .row{
+        display: flex;
+        
+    }
+
+    .about .col:nth-child(1){
+        width: 79%;
+        height: 710px;
+    }
+
+    .about .col:nth-child(2){
+        width: 20%;
+        height: 520px;
+    }
+
 }
 
    
@@ -223,6 +297,10 @@ body{
     .strategic .container{
         display: flex;
         align-items: flex-end;
+    }
+
+    .benefits .col{
+        width: 33%;
     }
 
     
