--- a/css/style.css
+++ b/css/style.css
@@ -182,16 +182,14 @@ body{
     height: 100%;
 }
 
-.about h2{
-    margin-bottom: 50px;
-}
-
 .about .col:nth-child(1){
-    height: 900px;
+    height: 950px;
     margin-bottom: 50px;
+    margin-top: 70px;
 }
 .about .col:nth-child(2){
     height: 450px;
+    margin-bottom: 80px;
 }
 
 
@@ -251,13 +249,14 @@ body{
     }
 
     .about .col:nth-child(1){
-        width: 79%;
+        width: 69%;
         height: 710px;
     }
 
     .about .col:nth-child(2){
-        width: 20%;
+        width: 30%;
         height: 520px;
+        margin-top: 70px;
     }
 
 }
@@ -303,5 +302,13 @@ body{
         width: 33%;
     }
 
+    .about .col:nth-child(1){
+        height: 620px;
+    }
+    .about .col:nth-child(2){
+        height: 530px;
+    }
+
+    
     
 }
