--- a/css/style.css
+++ b/css/style.css
@@ -104,9 +104,7 @@ body{
 
 /* MAIN  */
 
-.demo{
-    margin-top: 80px;
-}
+
 
 .demo .container{
     margin: 0 30px;
@@ -114,22 +112,64 @@ body{
 
 .container .row{
     width: 100%;
-    margin-top: 30px;
+    margin-top: 110px;
     justify-content: center;
 }
 
 .row .card-large{
     width: 100%;
     height: 600px;
-    background-color: aqua;
+    background-color: #B5DDFF;
     margin-bottom: 30px;
+    border-radius: 20px;
 }
 
 .row .card-small{
     width: 100%;
     height: 360px;
-    background-color: aqua;
+    background-color: #B5DDFF;
     margin-bottom: 30px;
+    border-radius: 20px;
+}
+
+.card-large .text-card h2{
+    text-align: center;
+    margin-top: 30px;
+    color: #0084FD;
+}
+.card-large .text-card p{
+    color: #5A6E7F;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
+
+.card-large .text-card a{
+    text-decoration: none;
+    color: white;
+    background-color: #0084FD;
+    padding: 10px 60px;
+    border-radius: 20px;
+}
+
+.card-large .text-card i{
+    margin-right: 10px;
+}
+
+.card-large .text-card img{
+    width: 100%;
+    object-fit: contain;
+}
+
+.row .card-large .text-card{
+    height: 100%;
+    margin: 0 35px;
+    position: relative;
+}
+
+.row .card-large .text-card img{
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .strategic{
