--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ body{
 
 .testimonial .container{
     height: 100%;
-    margin: 70px 30px 100px 30px;
+    margin: 0 30px;
 }
 .testimonial .row{
     height: 100%;
@@ -327,12 +327,13 @@ body{
 
 .testimonial .col:nth-child(1){
     margin-bottom: 50px;
+    margin-top: 70px;
     background-color: white;
     text-align: center;
 }
 
 .testimonial .col:nth-child(4){
-    margin-bottom: 0;
+    margin-bottom: 110px;
 }
 
 .testimonial .row:nth-child(1) .col{
@@ -471,12 +472,21 @@ footer .container{
         height: 100%;
     }
 
-    .testimonial .col:nth-child(1){
-        height: 200px;
+    
+
+    .testimonial .card{
+        display: flex;
     }
 
-    .testimonial .col{
-        height: 280px;
+    .testimonial .card-img{
+        width: 75%;
+        height: 78%;
+        margin: 30px 0;
+    }
+
+    .testimonial .card-text{
+        margin: 50px 0;
+        text-align: left;
     }
 
     .benefits .row{
@@ -628,6 +638,12 @@ footer .container{
     .testimonial .container{
         margin: 0 auto;
     }
+
+    .testimonial .card-img{
+        width: 30%;
+    }
+
+   
 
     .benefits .col{
         width: 33%;
