--- a/css/style.css
+++ b/css/style.css
@@ -416,13 +416,64 @@ body{
 }
 
 .about .col:nth-child(1){
-    height: 950px;
+    height: 100%;
     margin-bottom: 50px;
     margin-top: 70px;
 }
 .about .col:nth-child(2){
-    height: 450px;
+    height: 100%;
     margin-bottom: 80px;
+}
+
+.about .col h2{
+    font-size: 2.8rem;
+    color: #9792E4;
+    margin-bottom: 45px;
+}
+
+.about .col p{
+    line-height: 2.1rem;
+}
+
+.about .col .p-top{
+    margin-bottom: 50px;
+}
+
+.about .col .card-img{
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+}
+
+.about .col .card-img i{
+    position: absolute;
+    top: 0;
+    left: 135px;
+    font-size: 4.5rem;
+    color: #9792E4;
+}
+
+.about .col .card-img img{
+    object-fit: cover;
+    width: 180px;
+    height: 180px;
+    border-radius: 50%;
+}
+
+.about .col .card-text h3{
+    font-size: 1.8rem;
+    color: #9792E4;
+    margin-bottom: 20px;
+}
+
+.about .col .card-text a{
+    color: white;
+    background-color: #9792E4;
+    padding: 5px 20px;
+    text-decoration: none;
+    font-size: 0.9rem;
+    border-radius: 20px;
 }
 
 .free{
